# src/index.ts
@@ -1,7 +1,7 @@
 import express, { type Request, type Response } from "express";
 import swaggerRouter from "./routes/swagger.router.js";
 import cors from "cors";
-import { pool } from "./config/db.js";
+import productosRouter from "./routes/product.routes.js";
 
 const port = process.env.PORT;
 
@@ -21,17 +21,7 @@ app.get("/", (req: Request, res: Response) => {
   });
 });
 
-app.get("/api/menu", async (req: Request, res: Response) => {
-  try {
-    const result = await pool.query("SELECT * FROM products;");
-    res.json(result.rows);
-  } catch (error) {
-    console.error("error al consultar PostgreSQL: ");
-    res.status(500).json({
-      message: "error al intentar conectar a la base de datos",
-    });
-  }
-});
+app.use("/api", productosRouter);
 
 app.listen(port, () => {
   console.log(`URL: http://localhost:${port}`);
